--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.14.3"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.14.3",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
